public/style.css
body {
  max-width: 940px;
}


main {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  min-height: 500px;
  height: auto;
  width: 100vw;
}

#editor {
  flex: 4;
  min-width: 550px;
  max-width: 50vw;
}

#browser {
  flex: 3;
  padding: 10px;
  overflow: auto;
  min-width: 350px;
  max-width: 50vw;
}

#browser #result {
  padding: 1rem;
  border: 1px solid #eee;
  border-radius: 5px;
}

#browser input {
  width: 50%;
}

#browser button {
  font-size: small;
  width: auto;
  margin: 0;
}

footer {
  margin-top: 1rem;
  font-size: small;
  font-style: italic;
}

